<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Редактор изображений</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_photo">Выбрать из галереи</string>
    <string name="save">Сохранить</string>
    <string name="undo">Отменить</string>
    <string name="redo">Повторить</string>
    <string name="crop">Обрезать</string>
    <string name="rotate">Повернуть</string>
    <string name="flip">Отразить</string>
    <string name="draw">Рисовать</string>
    <string name="shape">Фигура</string>
    <string name="text">Текст</string>
    <string name="text_size">Размер текста</string>
    <string name="color">Цвет</string>
    <string name="brush_size">Размер кисти</string>
    <string name="rectangle">Прямоугольник</string>
    <string name="circle">Круг</string>
    <string name="add_text">Добавить текст</string>
    <string name="text_style">Стиль текста</string>
    <string name="bold">Жирный</string>
    <string name="italic">Курсив</string>
    <string name="font">Шрифт</string>
</resources>